tests/miniJava/neg/006720_mutation.MiniJava
class java { public static void while ( String [ ] java ) { { } } }
